Update title and year in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>修学旅行 in 台湾 - 冒険のしおり</title>
+    <title>修学旅行 in 台湾 - 5班のしおり</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&family=Yuji+Syuku&display=swap');
 
@@ -165,7 +165,6 @@
     <!-- オープニング画面 -->
     <div id="intro-overlay">
         <div style="display: flex; align-items: center;">
-            <div class="intro-sub">いざ、異文化の迷宮へ</div>
             <div class="intro-text">台湾上陸</div>
         </div>
     </div>
@@ -181,7 +180,7 @@
             <div class="lantern" style="animation-delay: 1.5s;"></div>
         </div>
         <h1>台湾探索</h1>
-        <p style="letter-spacing: 0.3em; margin-top: 10px;">修学旅行 2024</p>
+        <p style="letter-spacing: 0.3em; margin-top: 10px;">修学旅行 2025</p>
     </div>
 
     <div class="container">
@@ -269,3 +268,4 @@
     </script>
 </body>
 </html>
+
