Fix HTML encoding issues in detail.html

--- a/detail.html
+++ b/detail.html
@@ -128,7 +128,7 @@
     <!-- サバイバル台湾語 -->
     <div class="survival-widget">
         <div class="survival-content" id="survival-box">
-            <h4 style="margin:0 0 10px; color:#d32f2f; text-align:center;">🚑 サバイバル台湾語</h4>
+            <h4 style="margin:0 0 10px; color:#d32f2f; text-align:center;">サバイバル中国語</h4>
             <div class="phrase-box"><div>トイレはどこ？</div><div class="phrase-tw">ツォースオ ザイ ナーリ？</div></div>
             <div class="phrase-box"><div>安くしてください</div><div class="phrase-tw">スアン ピエンイー イーディエン</div></div>
             <div class="phrase-box"><div>パクチー入れないで</div><div class="phrase-tw">プーヤオ シャンツァイ！</div></div>
@@ -208,3 +208,4 @@
     </script>
 </body>
 </html>
+
