--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
         <h2 class="section-title">小籠包s　班員メンバー</h2>
         <div class="member-list">
             <div class="member-card"><span class="role-badge">班長</span><span class="member-name">興野晴</span></div>
-            <div class="member-card"><span class="role-badge">副班長</span><span class="member-name">金駿翔</span></div>
-            <div class="member-card"><span class="role-badge">一般</span><span class="member-name">小池璃奈</span></div>
-            <div class="member-card"><span class="role-badge">一般</span><span class="member-name">軸薗遼星</span></div>
-            <div class="member-card"><span class="role-badge">一般</span><span class="member-name">菅野菜桜子</span></div>
-            <div class="member-card"><span class="role-badge">一般</span><span class="member-name">堀江真太朗</span></div>
-            <div class="member-card"><span class="role-badge">一般</span><span class="member-name">横山咲希</span></div>
-            <div class="member-card"><span class="role-badge">一般</span><span class="member-name">来梦瞳</span></div>
+            <div class="member-card"><span class="role-badge">副班長</span><span class="member-name">小池璃奈</span></div>
+            <div class="member-card"><span class="role-badge"></span><span class="member-name">金駿翔</span></div>
+            <div class="member-card"><span class="role-badge"></span><span class="member-name">軸薗遼星</span></div>
+            <div class="member-card"><span class="role-badge"></span><span class="member-name">菅野菜桜子</span></div>
+            <div class="member-card"><span class="role-badge"></span><span class="member-name">堀江真太朗</span></div>
+            <div class="member-card"><span class="role-badge"></span><span class="member-name">横山咲希</span></div>
+            <div class="member-card"><span class="role-badge"></span><span class="member-name">来梦瞳</span></div>
         </div>
 
         <!-- スポット一覧セクション -->
@@ -158,7 +158,7 @@
         </div>
 
         <!-- 実用情報セクション -->
-        <h2 class="section-title">サバイバルガイド</h2>
+        <h2 class="section-title">つぶやき</h2>
         <div class="info-grid">
             <div class="info-box">
                 <h3>通貨とチップ</h3>
@@ -240,3 +240,4 @@
     </script>
 </body>
 </html>
+
