--- a/index.html
+++ b/index.html
@@ -179,13 +179,16 @@
     <div class="container">
         
         <!-- 班員メンバー -->
-        <h2 class="section-title">班員メンバー</h2>
+        <h2 class="section-title">小籠包s 班員メンバー</h2>
         <div class="member-list">
-            <div class="member-card"><span class="role-badge">班長</span><span class="member-name">佐藤 健太</span></div>
-            <div class="member-card"><span class="role-badge">副班長</span><span class="member-name">田中 みらい</span></div>
-            <div class="member-card"><span class="role-badge">会計</span><span class="member-name">鈴木 翔</span></div>
-            <div class="member-card"><span class="role-badge">保健</span><span class="member-name">高橋 葵</span></div>
-            <div class="member-card"><span class="role-badge">書記</span><span class="member-name">伊藤 蓮</span></div>
+            <div class="member-card"><span class="role-badge">班長</span><span class="member-name">興野晴</span></div>
+            <div class="member-card"><span class="role-badge">副班長</span><span class="member-name">小池璃奈</span></div>
+            <div class="member-card"><span class="role-badge"></span><span class="member-name">金駿翔</span></div>
+            <div class="member-card"><span class="role-badge"></span><span class="member-name">軸薗遼星</span></div>
+            <div class="member-card"><span class="role-badge"></span><span class="member-name">菅野菜桜子</span></div>
+            <div class="member-card"><span class="role-badge"></span><span class="member-name">堀江真太朗</span></div>
+            <div class="member-card"><span class="role-badge"></span><span class="member-name">横山咲希</span></div>
+            <div class="member-card"><span class="role-badge"></span><span class="member-name">来梦瞳</span></div>
         </div>
 
         <!-- 巡回ルート -->
@@ -314,3 +317,4 @@
     </script>
 </body>
 </html>
+
