--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="info-grid">
             <div class="info-box">
                 <h3>💰 通貨とチップ</h3>
-                <p>1 TWD ≈ 4.7 円。チップ不要。<br>夜市は現金のみ！</p>
+                <p>1 TWD ≈ 4.7 円。チップ不要。<br>夜市は現金のみ！(キャッシュレス使えるところもある。)</p>
             </div>
             <div class="info-box">
                 <h3>🔌 電源・ネット</h3>
@@ -317,4 +317,5 @@
     </script>
 </body>
 </html>
+
 
