--- a/index.html
+++ b/index.html
@@ -198,19 +198,19 @@
         </div>
 
         <!-- サバイバルガイド -->
-        <h2 class="section-title">サバイバルガイド</h2>
+        <h2 class="section-title">つぶやき</h2>
         <div class="info-grid">
             <div class="info-box">
-                <h3>💰 通貨とチップ</h3>
+                <h3>通貨とチップ</h3>
                 <p>1 TWD ≈ 4.7 円。チップ不要。<br>夜市は現金のみ！(キャッシュレス使えるところもある。)</p>
             </div>
             <div class="info-box">
-                <h3>🔌 電源・ネット</h3>
+                <h3>電源・ネット</h3>
                 <p>110V / Aタイプ (日本と同じ)。<br>フリーWi-Fi「iTaiwan」活用。</p>
             </div>
             <div class="info-box">
-                <h3>🚽 トイレ事情</h3>
-                <p>ゴミ箱があれば紙はそこに捨てる。<br>駅やデパートは流せる。</p>
+                <h3>トイレ事情</h3>
+                <p>隣にゴミ箱があれば紙はそこに捨てる。<br>駅やデパートは流せることが多い。</p>
             </div>
             <div class="info-box">
                 <h3>🆘 緊急連絡</h3>
@@ -317,5 +317,6 @@
     </script>
 </body>
 </html>
+
 
 
