--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         :root {
             --primary: #8B0000;
             --accent: #FFD700;
-            --bg: #0a0a0a; /* 深い黒（演出用） */
+            --bg: #0a0a0a;
             --text: #f0f0f0;
-            --card-glass: rgba(40, 40, 40, 0.85); /* 半透明の背景 */
+            --card-glass: rgba(40, 40, 40, 0.85);
         }
 
         body {
@@ -22,7 +22,6 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
-            /* 星空背景 */
             background-image: 
                 radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 3px),
                 radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 2px);
@@ -54,7 +53,7 @@
             100% { opacity: 0; transform: scale(1.2); filter: blur(5px); }
         }
 
-        /* --- 背景エフェクト (蛍 & ランタン) --- */
+        /* --- 背景エフェクト --- */
         #fireflies, #sky-lanterns { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; }
         #fireflies { z-index: 1; }
         #sky-lanterns { z-index: 0; }
@@ -101,10 +100,9 @@
         }
         @keyframes textGlow { from { text-shadow: 0 0 10px var(--accent); } to { text-shadow: 0 0 30px var(--accent), 0 0 10px white; } }
 
-        /* --- コンテンツ共通 --- */
+        /* --- コンテンツ --- */
         .container { max-width: 1200px; margin: 0 auto; padding: 40px 20px; position: relative; z-index: 10; }
 
-        /* セクション見出し */
         .section-title {
             text-align: center; font-family: 'Yuji Syuku'; font-size: 2.2rem;
             color: var(--accent); margin: 60px 0 30px;
@@ -113,7 +111,7 @@
         }
         .section-title::before, .section-title::after { content: ""; display: block; width: 50px; height: 2px; background: var(--primary); }
 
-        /* --- 班員リスト --- */
+        /* 班員リスト */
         .member-list { display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; }
         .member-card {
             background: var(--card-glass); border: 1px solid #555;
@@ -123,10 +121,14 @@
             backdrop-filter: blur(5px);
         }
         .member-card:hover { transform: translateY(-5px); border-color: var(--accent); background: rgba(80,0,0,0.6); }
-        .role-badge { background: var(--primary); color: white; padding: 3px 12px; border-radius: 20px; font-size: 0.8rem; font-weight: bold; }
+        .role-badge { 
+            background: var(--primary); color: white; padding: 3px 12px; 
+            border-radius: 20px; font-size: 0.8rem; font-weight: bold; min-width: 10px;
+        }
+        .role-badge:empty { display: none; } /* 役職がない場合はバッジを消す */
         .member-name { font-size: 1.1rem; font-weight: bold; }
 
-        /* --- スポットカード --- */
+        /* グリッド・カード */
         .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px; }
         .card {
             background: var(--card-glass); border: 1px solid var(--accent);
@@ -142,7 +144,7 @@
         .tag { display: inline-block; background: var(--primary); color: white; padding: 4px 12px; border-radius: 20px; font-size: 0.8rem; margin-bottom: 15px; }
         @keyframes cardEntrance { to { opacity: 1; transform: translateY(0); } }
 
-        /* --- 実用情報 --- */
+        /* 実用情報 */
         .info-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
         .info-box {
             background: var(--card-glass); border-left: 5px solid var(--accent); padding: 20px;
@@ -150,6 +152,23 @@
         }
         .info-box h3 { margin-top: 0; color: var(--accent); }
         .emergency-number { font-size: 1.5rem; color: #ff4d4d; font-weight: bold; }
+
+        /* --- アクセスカウンター --- */
+        .footer {
+            margin-top: 80px; padding: 40px 20px;
+            background: rgba(0,0,0,0.8); border-top: 1px solid #333;
+            text-align: center; color: #888;
+        }
+        .counter-box {
+            display: inline-block; padding: 10px 20px;
+            border: 1px solid var(--accent); border-radius: 10px;
+            background: rgba(40, 0, 0, 0.5);
+            font-family: 'Yuji Syuku'; font-size: 1.2rem; color: #f0f0f0;
+        }
+        .count-num {
+            color: var(--accent); font-size: 1.8rem; font-weight: bold; margin: 0 5px;
+            text-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
+        }
 
         @media (max-width: 600px) { h1 { font-size: 2.5rem; } }
     </style>
@@ -197,12 +216,12 @@
             <div style="text-align:center;">Loading...</div>
         </div>
 
-        <!-- サバイバルガイド -->
+        <!-- 実用情報 -->
         <h2 class="section-title">つぶやき</h2>
         <div class="info-grid">
             <div class="info-box">
                 <h3>通貨とチップ</h3>
-                <p>1 TWD ≈ 4.7 円。チップ不要。<br>夜市は現金のみ！(キャッシュレス使えるところもある。)</p>
+                <p>1 TWD ≈ 4.7 円。チップ不要。<br>夜市は現金のみが多い。</p>
             </div>
             <div class="info-box">
                 <h3>電源・ネット</h3>
@@ -210,7 +229,7 @@
             </div>
             <div class="info-box">
                 <h3>トイレ事情</h3>
-                <p>隣にゴミ箱があれば紙はそこに捨てる。<br>駅やデパートは流せることが多い。</p>
+                <p>ゴミ箱があれば紙はそこに。<br>駅やデパートは流せる。</p>
             </div>
             <div class="info-box">
                 <h3>🆘 緊急連絡</h3>
@@ -218,6 +237,15 @@
                 <p>救急：<span class="emergency-number">119</span></p>
             </div>
         </div>
+
+    </div>
+
+    <!-- アクセスカウンター (フッター) -->
+    <div class="footer">
+        <div class="counter-box">
+            累計アクセス数：<span id="visitor-count" class="count-num">---</span> 人
+        </div>
+        <p style="font-size: 0.8rem; margin-top: 10px;">Have a nice trip!</p>
     </div>
 
     <script>
@@ -239,7 +267,37 @@
             }
         });
 
-        // --- 2. 蛍エフェクト ---
+        // --- 2. アクセスカウンター (Github Pages対応) ---
+        // 無料API "counterapi.dev" を使用します。
+        // "taiwan-trip-5han-unique-id" の部分は世界中でユニークである必要があります。
+        // 被らないようにランダムな文字列を入れています。
+        const COUNTER_NAMESPACE = 'taiwan-trip-5han-project-2025'; 
+        const COUNTER_KEY = 'visits';
+
+        async function updateCounter() {
+            const counterElement = document.getElementById('visitor-count');
+            try {
+                // 1. カウントアップ(up)エンドポイントを叩く
+                const response = await fetch(`https://api.counterapi.dev/v1/name/${COUNTER_NAMESPACE}/${COUNTER_KEY}/up`);
+                const data = await response.json();
+                
+                // 2. 数値を表示 (カウント値は data.count に入る)
+                if(data && data.count) {
+                    counterElement.innerText = data.count;
+                } else {
+                    counterElement.innerText = "Error";
+                }
+            } catch (e) {
+                console.error("Counter Error:", e);
+                // エラー時は "---" のままにするか、LocalStorageで簡易表示に切り替えるなど
+                counterElement.innerText = "---";
+            }
+        }
+        // ページ読み込み時に実行
+        updateCounter();
+
+
+        // --- 3. 蛍エフェクト ---
         function createFireflies() {
             const container = document.getElementById('fireflies');
             for (let i = 0; i < 30; i++) {
@@ -253,7 +311,7 @@
             }
         }
 
-        // --- 3. スカイランタン ---
+        // --- 4. スカイランタン ---
         function createSkyLanterns() {
             const container = document.getElementById('sky-lanterns');
             for (let i = 0; i < 15; i++) {
@@ -270,10 +328,11 @@
             }
         }
 
-        // --- 4. CSV読み込み (堅牢版) ---
+        // --- 5. CSV読み込み ---
         async function loadCSV() {
             try {
                 const response = await fetch('spots.csv');
+                if (!response.ok) throw new Error("CSV Not Found");
                 const data = await response.text();
                 const rows = data.split('\n').slice(1);
                 const grid = document.getElementById('spot-grid');
@@ -282,7 +341,6 @@
                 rows.forEach((row, index) => {
                     if (!row.trim()) return;
                     
-                    // カンマ区切り対応パース
                     const cols = []; let current = ''; let inQuote = false;
                     for (let i = 0; i < row.length; i++) {
                         const char = row[i];
@@ -308,7 +366,10 @@
                     `;
                     grid.appendChild(card);
                 });
-            } catch (e) { console.error(e); }
+            } catch (e) { 
+                console.error(e); 
+                document.getElementById('spot-grid').innerHTML = '<p>データを読み込めませんでした。<br>spots.csvが同じフォルダにあるか確認してください。</p>';
+            }
         }
 
         createFireflies();
@@ -317,6 +378,3 @@
     </script>
 </body>
 </html>
-
-
-
