--- a/index.html
+++ b/index.html
@@ -220,15 +220,15 @@
         <h2 class="section-title">つぶやき</h2>
         <div class="info-grid">
             <div class="info-box">
-                <h3>通貨とチップ</h3>
+                <h3>💰 通貨とチップ</h3>
                 <p>1 TWD ≈ 4.7 円。チップ不要。<br>夜市は現金のみが多い。</p>
             </div>
             <div class="info-box">
-                <h3>電源・ネット</h3>
+                <h3>🔌 電源・ネット</h3>
                 <p>110V / Aタイプ (日本と同じ)。<br>フリーWi-Fi「iTaiwan」活用。</p>
             </div>
             <div class="info-box">
-                <h3>トイレ事情</h3>
+                <h3>🚽 トイレ事情</h3>
                 <p>ゴミ箱があれば紙はそこに。<br>駅やデパートは流せる。</p>
             </div>
             <div class="info-box">
@@ -249,6 +249,9 @@
     </div>
 
     <script>
+        // ★★★重要：ここにGASのウェブアプリURLを貼り付けてください★★★
+        const GAS_URL = "https://script.google.com/macros/s/AKfycbxeZu687NsWCCxyYuvgW5XTvCNjoDFkhfrWzlIbpwua5y4YtgAoWP1-32-Xl5nqWDGV/exec"; 
+
         // --- 1. オープニング制御 ---
         let baseAnimationDelay = 4.0; 
         window.addEventListener('load', () => {
@@ -267,21 +270,21 @@
             }
         });
 
-        // --- 2. アクセスカウンター (Github Pages対応) ---
-        // 無料API "counterapi.dev" を使用します。
-        // "taiwan-trip-5han-unique-id" の部分は世界中でユニークである必要があります。
-        // 被らないようにランダムな文字列を入れています。
-        const COUNTER_NAMESPACE = 'taiwan-trip-5han-project-2025'; 
-        const COUNTER_KEY = 'visits';
-
+        // --- 2. GASアクセスカウンター (更新処理) ---
         async function updateCounter() {
             const counterElement = document.getElementById('visitor-count');
+            
+            // URLが設定されていない場合のガード処理
+            if (GAS_URL.includes("ここにGAS")) {
+                console.warn("GAS_URLが設定されていません");
+                return;
+            }
+
             try {
-                // 1. カウントアップ(up)エンドポイントを叩く
-                const response = await fetch(`https://api.counterapi.dev/v1/name/${COUNTER_NAMESPACE}/${COUNTER_KEY}/up`);
+                // GASはリダイレクトを返すため、fetchが自動的に追従します
+                const response = await fetch(GAS_URL);
                 const data = await response.json();
                 
-                // 2. 数値を表示 (カウント値は data.count に入る)
                 if(data && data.count) {
                     counterElement.innerText = data.count;
                 } else {
@@ -289,11 +292,10 @@
                 }
             } catch (e) {
                 console.error("Counter Error:", e);
-                // エラー時は "---" のままにするか、LocalStorageで簡易表示に切り替えるなど
+                // エラー時でも見た目を損なわないように
                 counterElement.innerText = "---";
             }
         }
-        // ページ読み込み時に実行
         updateCounter();
 
 
